--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-              CGO_ENABLED=0 go test ./...
+              CGO_ENABLED=0 encore test ./...
       - run:
           name: Run vet
           command: |
