--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
           command: |
             go install honnef.co/go/tools/cmd/staticcheck@latest
             staticcheck -checks=all ./...
-      - run:
-          name: Run govulncheck
-          command: |
-            go install golang.org/x/vuln/cmd/govulncheck@latest
-            govulncheck ./...
+      # - run:
+      #     name: Run govulncheck
+      #     command: |
+      #       go install golang.org/x/vuln/cmd/govulncheck@latest
+      #       govulncheck ./...
